<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_light"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <!-- Header - без стрелки -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/Text_TitleScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_search" />

    <!-- Search field -->
    <FrameLayout
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_search_field">

        <!-- Search icon -->
        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_search"
            app:tint="@color/search_hint_and_icons" />

        <!-- Input -->
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingStart="44dp"
            android:paddingEnd="44dp"
            android:textColor="@color/search_input_text"
            android:textColorHint="@color/search_hint_and_icons" />

        <!-- Clear button -->
        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/clear_search"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:padding="4dp"
            app:tint="@color/search_hint_and_icons" />

    </FrameLayout>

</LinearLayout>